wayland/inhibit-shortcuts-dialog: Only reuse last reply if there was one

We might have hidden the dialog, without a response. To avoid using the
not answered response, make sure we have actually got one before
reusing.

https://bugzilla.gnome.org/show_bug.cgi?id=786385